--- a/mito/templates/users/admin/activate.html
+++ b/mito/templates/users/admin/activate.html
@@ -1,4 +1,4 @@
 {% extends 'layouts/base.html' %}
-{% block body %}
+{% block content %}
 Your system is currently {{ config.APPLICATIONS_OPEN }}. If you would like to change that, please change that here.
 {% endblock %}
