--- a/mito/templates/layouts/base.html
+++ b/mito/templates/layouts/base.html
@@ -1,63 +1,40 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>{% block title %}{{ config.HACKATHON_NAME }}{% endblock %}</title>
-	<meta name="viewport" content="initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.1.0.min.js"
-			integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css">
-	<script type=text/javascript>
-		$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-	</script>
-</head>
-<body>
-<noscript>
-	{% with messages = get_flashed_messages() %}
-		{% if messages %}
-			<ul class=flashes>
-				{% for message in messages %}
-					<li>{{ message }}</li>
-				{% endfor %}
-			</ul>
-		{% endif %}
-	{% endwith %}
-</noscript>
-{% if g.user.is_authenticated %}
+{% extends 'layouts/head.html' %}
+{% block body %}
+	<noscript>
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+				<ul class=flashes>
+					{% for message in messages %}
+						<li>{{ message }}</li>
+					{% endfor %}
+				</ul>
+			{% endif %}
+		{% endwith %}
+	</noscript>
+	{% if g.user.is_authenticated %}
+		<nav class="header">
+			<div class="container">
+				<div class="col-md-3 col-md-offset-5 col-xs-3">
+					<a href="https://hacktx.com"><img src="{{ url_for('static', filename='branding/logo.png') }}"
+													  height="60"></a></div>
+				<a href="{{ url_for('logout') }}" class="pull-right">Logout</a>
+			</div>
+		</nav>
+	{% endif %}
 
-{% endif %}
-<nav class="header">
 	<div class="container">
-		<div class="col-md-3 col-md-offset-5 col-xs-3">
-			<a href="https://hacktx.com"><img src="{{ url_for('static', filename='branding/logo.png') }}"
-											  height="60"></a></div>
-		<a href="{{ url_for('logout') }}" class="pull-right">Logout</a>
-	</div>
-</nav>
-<div class="container">
 
-	<div class="content">
-		{% block body %}
-		{% endblock %}
+		<div class="content">
+			{% block content %}
+			{% endblock %}
+		</div>
 	</div>
-</div>
 
-<footer class="footer">
-	<div class="col-md-6 col-md-offset-3">
-		<a href="https://freetailhackers.com"><img class="img-responsive center-block"
-												   src="{{ url_for('static', filename='branding/badge.svg') }}"
-												   width=50></a>
-	</div>
-</footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.1/toastr.min.js"></script>
-<script>
-	/* turning flask flash messages into js popup notifications */
-	window.popupMessages = {{ get_flashed_messages(with_categories=True) | json | safe }};
-</script>
-<script src="{{ url_for('static', filename='js/main.js') }}"></script>
-
-</body>
+	<footer class="footer">
+		<div class="col-md-6 col-md-offset-3">
+			<a href="https://freetailhackers.com"><img class="img-responsive center-block"
+													   src="{{ url_for('static', filename='branding/badge.svg') }}"
+													   width=50></a>
+		</div>
+	</footer>
+{% endblock body %}
