--- a/mito/templates/static_pages/index.html
+++ b/mito/templates/static_pages/index.html
@@ -1,19 +1,19 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/head.html' %}
 {% block body %}
-  <div class="bg">
-    <section class="header">
-        <div class="container">
-{#            <a href="http://freetailhackers.com"><img class="logo img-responsive" src="{{ url_for('static', filename='branding/badge.svg') }}"></a>#}
-        </div>
-    </section>
 
     <section class="content">
-      <img class="hacktx-logo img-responsive" src="{{ url_for('static', filename='branding/logo.png') }}"/>
+      <img class="hacktx-logo img-responsive center-block" src="{{ url_for('static', filename='branding/logo.svg') }}"/>
       <div class="center"><h3>Austin, TX | October 22-23, 2016</h3></div>
 		<a href="{{ url_for('login') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons">Sign in with MyMLH</button></a>
     </section>
-  </div>
 
+	<footer class="footer">
+		<div class="col-md-6 col-md-offset-3">
+			<a href="https://freetailhackers.com"><img class="img-responsive center-block"
+													   src="{{ url_for('static', filename='branding/badge.svg') }}"
+													   width=50></a>
+		</div>
+	</footer>
 
 
 
