--- a/mito/templates/users/dashboard/admin_dashboard.html
+++ b/mito/templates/users/dashboard/admin_dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base.html' %}
-{% block body %}
+{% block content %}
     HELLO ADMIN!
     Here are some actions you can do:
     <ul>
