--- a/mito/templates/users/dashboard/confirmed.html
+++ b/mito/templates/users/dashboard/confirmed.html
@@ -1,4 +1,4 @@
 {% extends 'layouts/base.html' %}
-{% block body %}
+{% block content %}
 Thanks for confirming to go to {{ config.HACKATHON_NAME }}! We look forward to seeing you here. <a href="/logout">Logout</a>
 {% endblock %}
