--- a/mito/templates/users/dashboard/confirmed.html
+++ b/mito/templates/users/dashboard/confirmed.html
@@ -1,4 +1,9 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
-Thanks for confirming to go to {{ config.HACKATHON_NAME }}! We look forward to seeing you here. <a href="/logout">Logout</a>
+	<div class="center col-md-6 col-md-offset-3">
+		<h1>Invitation Confirmed</h1>
+		<div class="large-text">
+			<p></p>
+		</div>
+	</div>
 {% endblock %}
