--- a/mito/templates/users/dashboard/waitlisted.html
+++ b/mito/templates/users/dashboard/waitlisted.html
@@ -1,5 +1,5 @@
-{% extends 'layouts/base.html' %}
-{% block content %}
-    Thanks for applying to {{ config.HACKATHON_NAME }} {{ user.fname }}! We don't currently have space to guarantee you admission to {{ config.HACKATHON_NAME }}, but we'd really like to try to fit you in, so we've placed you on our waiting list.
-<a href="{{ url_for('logout') }}">Logout</a>
+{% extends 'users/dashboard/rejected.html' %}
+{% block decision %}
+	<p>Thanks for applying to {{ config.HACKATHON_NAME }}. This year we had many more applicants than we had space for, but we're still hoping that we can fit you in so we put you on the waitlist. Make sure to keep an eye out on your email, as we send out invites to people on the waitlist.</p>
+	<p>While we wish we could accept everyone who applies for {{ config.HACKATHON_NAME }}, there's a limited amount of space and it wouldn't be fun for anyone if it got too crowded. If you don't get in, we'd still be delighted for you to join us as a <a href="https://hacktx.com/volunteer" class="decorate">volunteer</a>!</p>
 {% endblock %}
