--- a/mito/templates/users/dashboard/confirmed.html
+++ b/mito/templates/users/dashboard/confirmed.html
@@ -4,7 +4,7 @@
 		<h1>Invitation Confirmed</h1>
 		<div class="large-text">
 			<p>Thanks for confirming to go to {{ config.HACKATHON_NAME }} {{ user.fname }}! We can't wait to see you on October 22nd!</p>
-			<p>For now, you can kick back and relax. We'll send you an email as we get closer to the event that will contain all the details you need. If you do have questions, feel free to shoot us an email over at <a href="mailto:{{ config.GENERAL_INFO_EMAIL }}" class="decorate">{{ config.GENERAL_INFO_EMAIL }}</a> </p>
+			<p>For now, you can kick back and relax. We'll send you an email as we get closer to the event that will contain all the details you need. If you do have questions, feel free to shoot us an email at <a href="mailto:{{ config.GENERAL_INFO_EMAIL }}" class="decorate">{{ config.GENERAL_INFO_EMAIL }}</a> </p>
 		</div>
 	</div>
 {% endblock %}
