--- a/mito/templates/users/dashboard/pending.html
+++ b/mito/templates/users/dashboard/pending.html
@@ -4,7 +4,7 @@
 	<div class="text-center col-md-8 col-md-offset-2">
 		<h1>Thanks for applying to {{ config.HACKATHON_NAME }} {{ user.fname }}!</h1>
 		<p>We'll accept the majority of our attendees through first-come first-serve, but we've also reserved a block of our slots for a random lottery in case you weren't one of the first to apply.</p>
-		<p>We'll make sure to send you an email when we have more info for you, but while you're waiting we have a cute GIF for you to look at</p>
+		<p>We'll make sure to send you an email when we have more info for you, but while you're waiting we have a cute GIF for you to look at!</p>
 		<img src="{{ url_for('static', filename='img/puppy.gif') }}" class="puppy">
 	</div>
 {% endblock %}
