--- a/mito/templates/emails/reset_password.html
+++ b/mito/templates/emails/reset_password.html
@@ -1,9 +1,30 @@
-Hey {{ user.fname }}!
-
-Someone requested a password reset for your account at {{ config.HACKATHON_NAME }}. To change your password, click <a href="{{ link }}">this link</a> within 24 hours, and enter your new password.
-
-If it wasn't you, don't worry, your password hasn't been changed.
-
-Thanks,
-
-Team {{ config.HACKATHON_NAME }}
+{% extends 'emails/base.html' %}
+{% block message %}
+<tr>
+	<td class="content-block">
+		Hey {{ user.fname }}!
+	</td>
+</tr>
+<tr>
+	<td class="content-block">
+		Someone requested a password reset for your account at {{ config.HACKATHON_NAME }}. To change your password,
+		click <a
+			href="{{ link }}">this link</a> within 24 hours, and enter your new password.
+	</td>
+</tr>
+<tr>
+	<td class="content-block">
+		If it wasn't you, don't worry, your password hasn't been changed.
+	</td>
+</tr>
+<tr>
+	<td class="content-block">
+		Thanks,
+	</td>
+</tr>
+<tr>
+	<td class="content-block">
+		Team {{ config.HACKATHON_NAME }}
+	</td>
+</tr>
+{% endblock %}
