--- a/pepper/templates/users/confirm.html
+++ b/pepper/templates/users/confirm.html
@@ -63,27 +63,23 @@
 		</a>
 		<hr>
 		<div class="col-md-8 col-md-offset-2">
-			<form action="/confirm" method="POST">
+			<form action="/confirm" method="POST" enctype="multipart/form-data">
 			<div class="row">
 				<h3>Resume</h3>
 				<div class="col-md-6 form-info">
-					<p>Upload your resume here. We'll be sharing this with our partners so you can get cool jobs, swag, and more! Endless opportunities!</p>
+					<p>Please upload your resume here. We'll be sharing this with our partners so you can get cool jobs, swag, and more!</p>
 				</div>
 				<div class="col-md-6">
-					<input type=file name="resume" style="">
+					<input type=file name="resume">
 				</div>
 </div>
 			<div class="row">
 				<h3>Additional Information</h3>
 				<div class="col-md-6 form-info">
 
-					{#	<div class="col-md-11 col-md-offset-1">#}
-					<p>At {{ config.HACKATHON_NAME }}, we work hard to celebrate diversity, and part of that involves
-						taking a critical look at ourselves to see how we've been doing. We would love to understand the
-						demographic breakdown, so we can make further improvements in the future.</p>
+					<p>At {{ config.HACKATHON_NAME }}, we work hard to make people feel welcome regardless of skill level and background. To help us accomplish this goal, we need to see how we’ve been doing.</p>
 					<p>Please select <i>I choose not to disclose</i> if you do not wish to provide this information. It
 						will not be considered in the application process or thereafter.</p>
-					{#		</div>#}
 				</div>
 
 					<div class="col-md-6">
