--- a/pepper/static/css/main.css
+++ b/pepper/static/css/main.css
@@ -237,7 +237,7 @@ form textarea {
   display: inline;
   width: 100%;
   text-align: left;
-  color: red; }
+  color: white; }
   form textarea:focus {
     width: 100%;
     height: 10em; }
