--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -11,7 +11,8 @@
 </head>
 
 <body itemscope itemtype="http://schema.org/EmailMessage">
-
+{% block email_schema %}
+{% endblock %}
 	<table class="body-wrap">
 		<tr>
 			<td></td>
