--- a/pepper/templates/users/accept.html
+++ b/pepper/templates/users/accept.html
@@ -2,7 +2,7 @@
 {% block imports %}
 <script type="text/javascript" src="https://s3.amazonaws.com/cdn.hellosign.com/public/js/hellosign-embedded.LATEST.min.js"></script>
 	<script>
-	HelloSign.init({{ config.HELLO_SIGN_CLIENT_ID }});
+	HelloSign.init('{{ config.HELLO_SIGN_CLIENT_ID }}');
 
 	$(document).ready(function() {
 		HelloSign.open({
