allow for user to update school

--- a/pepper/templates/users/confirm.html
+++ b/pepper/templates/users/confirm.html
@@ -49,7 +49,7 @@
 					</tr>
 					<tr>
 						<td>School</td>
-						<td>{{ user.school }}</td>
+						<td>{{ user.school_name }}</td>
 					</tr>
 					<tr>
 						<td class="no-border">Special Needs</td>
