front end fixes on the confirmation screen

--- a/pepper/static/css/main.css
+++ b/pepper/static/css/main.css
@@ -4,6 +4,9 @@
   .confirmation button.decision {
     width: 100% !important; }
 
+.red {
+  color: #CB0922; }
+
 .accept button {
   background: #5983A0; }
   .accept button.submit {
