added values onto class standing

--- a/pepper/templates/users/confirm.html
+++ b/pepper/templates/users/confirm.html
@@ -116,12 +116,12 @@
 							<h4>What is your class standing?</h4>
 							<div class="select" name="class-standing">
 							  <select>
-								  <option>Freshman</option>
-								  <option>Sophomore</option>
-								  <option>Junior</option>
-								  <option>Senior</option>
-								  <option>Graduate Student</option>
-								  <option>High Schooler</option>
+								  <option value="Freshman">Freshman</option>
+								  <option value="Sophomore">Sophomore</option>
+								  <option value="Junior">Junior</option>
+								  <option value="Senior">Senior</option>
+								  <option value="Graduate">Graduate Student</option>
+								  <option value="HS">High Schooler</option>
 							  </select>
 							  <div class="select__arrow"></div>
 							</div>
