actually fixed class standing

--- a/pepper/templates/users/confirm.html
+++ b/pepper/templates/users/confirm.html
@@ -114,8 +114,8 @@
 						</div>
 						<div class="control-group">
 							<h4>What is your class standing?</h4>
-							<div class="select" name="class-standing">
-							  <select>
+							<div class="select">
+							  <select name="class-standing">
 								  <option value="Freshman">Freshman</option>
 								  <option value="Sophomore">Sophomore</option>
 								  <option value="Junior">Junior</option>
